--- a/.github/workflows/add-to-project.yaml
+++ b/.github/workflows/add-to-project.yaml
@@ -7,7 +7,7 @@ on:
   issues:
     types: [opened, reopened]
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+  MY_GITHUB_TOKEN: ${{ secrets.SENZING_GITHUB_TOKEN }}
 
 jobs:
   assign_one_project:
@@ -17,5 +17,5 @@ jobs:
     - name: Assign NEW issues to project
       uses: srggrs/assign-one-project-github-action@1.2.1
       with:
-        project: ${{ secrets.PROJECT_URL }}
+        project: 'https://github.com/orgs/Senzing/projects/2'
         column_name: 'Backlog'
