--- a/.github/workflows/add-to-project.yaml
+++ b/.github/workflows/add-to-project.yaml
@@ -7,7 +7,7 @@ on:
   issues:
     types: [opened, reopened]
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.SENZING_GITHUB_TOKEN }}
+  GITHUB_ACCESS_TOKEN: ${{ secrets.SENZING_GITHUB_ACCESS_TOKEN }}
 
 jobs:
   assign_one_project:
