--- a/.github/workflows/add-to-project.yaml
+++ b/.github/workflows/add-to-project.yaml
@@ -1,21 +1,25 @@
 # Based on
 # - https://github.com/srggrs/assign-one-project-github-action
 
-name: Auto Assign to Project
+name: Auto Assign to Project(s)
 
 on:
   issues:
-    types: [opened, reopened]
+    types: [opened, labeled]
 env:
   GITHUB_TOKEN: ${{ secrets.SENZING_GITHUB_ACCESS_TOKEN }}
+  REPO_URL: ${{ github.event.repository.url}}
 
 jobs:
   assign_one_project:
     runs-on: ubuntu-latest
     name: Assign to One Project
     steps:
-    - name: Assign NEW issues to project
-      uses: srggrs/assign-one-project-github-action@1.2.1
+    - name: Assign NEW issues and NEW pull requests to project 2
+      uses: SamMacy/assign-one-project-github-action@1.3.0
       with:
-        project: 'https://github.com/orgs/Senzing/projects/2'
+        project1: 'https://github.com/orgs/Senzing/projects/2'
+        project2: 'https://github.com/orgs/Senzing/projects/6'
+        topic1: 't-comm'
+        topic2: 't-ast'
         column_name: 'Backlog'
