--- a/.github/workflows/add-triage-label.yaml
+++ b/.github/workflows/add-triage-label.yaml
@@ -7,6 +7,8 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
+# MJD test 1
+
 name: Simple Issue Labeler
 on:
   issues:
