--- a/.github/workflows/identify-customer.yaml
+++ b/.github/workflows/identify-customer.yaml
@@ -15,6 +15,7 @@ env:
   NUMBER: ${{ github.event.issue.number }}
   TOKEN: ${{ secrets.SENZING_SLACK_BEARER_TOKEN }}
   REPO_URL: ${{ github.repository }}
+  SLACK_HASHES: ${{ secrets.SENZING_GITHUB_SLACK_MAP }}
 
 jobs:
   check-membership:
@@ -23,7 +24,7 @@ jobs:
     - name: run script
       env:
           BOOL: ${{ contains( env.MEMBER_LIST, env.CREATOR ) }}
-      if: ${{ env.BOOL == 'false' }}
+#      if: ${{ env.BOOL == 'false' }}
       uses: Senzing/github-action-identify-customer@issue-3.macy.1
   automate-issues-labels:
     runs-on: ubuntu-latest
