--- a/.github/workflows/identify-customer.yaml
+++ b/.github/workflows/identify-customer.yaml
@@ -18,6 +18,16 @@ env:
   SLACK_HASHES: ${{ secrets.SENZING_GITHUB_SLACK_MAP }}
 
 jobs:
+  get-file:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Read package.json
+      id: package
+      uses: juliangruber/read-file-action@v1
+      with:
+        path: ./.github/CODEOWNERS
+    - name: Echo package.json
+      run: echo "${{ steps.package.outputs.content }}"
   check-membership:
     runs-on: ubuntu-latest
     steps:
