--- a/.github/workflows/identify-customer.yaml
+++ b/.github/workflows/identify-customer.yaml
@@ -35,4 +35,4 @@ jobs:
         if: ${{ env.BOOL == 'false' }}
         uses: andymckay/labeler@1.0.3
         with:
-          add-labels: "customer-submission"
+          add-labels: "customer-submission, triage"
