--- a/.github/workflows/copy-to-s3.yaml
+++ b/.github/workflows/copy-to-s3.yaml
@@ -19,6 +19,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: check the file list
       run: ls -al # list the files for confirmation.
+    - name: pwd
+      run: pwd
     - name: Get the version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
