--- a/.github/workflows/copy-to-s3.yaml
+++ b/.github/workflows/copy-to-s3.yaml
@@ -35,7 +35,7 @@ jobs:
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: Copy cloudformation-senzing-basic.yaml to S3
-      run: aws s3 cp cloudformation-senzing-basic.yaml s3://${{ secrets.SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/test.yaml
+      run: aws s3 cp cloudformation-senzing-basic.yaml s3://senzingbuilds/jeffa/test.yaml
 
 #      env:
 #        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
