--- a/.github/workflows/copy-to-s3.yaml
+++ b/.github/workflows/copy-to-s3.yaml
@@ -27,8 +27,8 @@ jobs:
         aws-access-key-id: ${{ secrets.SENZING_AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.SENZING_AWS_ACCESS_SECRET }}
         aws-region: us-east-1
-        role-duration-seconds: 1200
-        role-session-name: MySessionName
+#        role-duration-seconds: 120
+#        role-session-name: MySessionName
 #        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
 #        role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
     - name: Get the version
@@ -36,6 +36,10 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: Copy cloudformation-senzing-basic.yaml to S3
       run: aws s3 cp cloudformation-senzing-basic.yaml s3://senzingbuilds/jeffa/test.yaml
+    - name: Copy cloudformation-senzing-basic.yaml to S3
+      run: aws s3 cp cloudformation-senzing-basic.yaml s3://senzingbuilds/jeffa/test-${{ steps.get_version.outputs.VERSION }}.yaml
+
+
 
 #      env:
 #        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
