--- a/.github/workflows/copy-to-s3.yaml
+++ b/.github/workflows/copy-to-s3.yaml
@@ -9,6 +9,7 @@ jobs:
     name: Copy CFTs to S3
     env:
       FILE_TO_COPY_1: cloudformation-senzing-basic
+      FILE_TO_COPY_2: cloudformation-senzing-database
     steps:
     - uses: actions/checkout@v2
     - name: Configure AWS Credentials
@@ -24,7 +25,7 @@ jobs:
       run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://senzingbuilds/jeffa/${{ env.FILE_TO_COPY_1 }}.yaml
     - name: Copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3 with version number
       run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://senzingbuilds/jeffa/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
-    - name: Copy cloudformation-senzing-database.yaml to S3
-      run: aws s3 cp cloudformation-senzing-database.yaml s3://senzingbuilds/jeffa/cloudformation-senzing-database.yaml
+    - name: Copy ${{ env.FILE_TO_COPY_2 }}.yaml to S3
+      run: aws s3 cp ${{ env.FILE_TO_COPY_2 }}.yaml s3://senzingbuilds/jeffa/${{ env.FILE_TO_COPY_2 }}.yaml
     - name: Copy cloudformation-senzing-database.yaml to S3 with version number
-      run: aws s3 cp cloudformation-senzing-database.yaml s3://senzingbuilds/jeffa/cloudformation-senzing-database.yaml-${{ steps.get_version.outputs.VERSION }}.yaml
+      run: aws s3 cp ${{ env.FILE_TO_COPY_2 }}.yaml s3://senzingbuilds/jeffa/${{ env.FILE_TO_COPY_2 }}-${{ steps.get_version.outputs.VERSION }}.yaml
