--- a/.github/workflows/copy-to-s3.yaml
+++ b/.github/workflows/copy-to-s3.yaml
@@ -22,10 +22,10 @@ jobs:
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
 #    - name: Copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3
-#      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/basic/${{ env.FILE_TO_COPY_1 }}.yaml
+#      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/basic/${{ env.FILE_TO_COPY_1 }}.yaml
     - name: Copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3 with version number
-      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/basic/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
+      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/basic/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
 #    - name: Copy ${{ env.FILE_TO_COPY_2 }}.yaml to S3
-#      run: aws s3 cp ${{ env.FILE_TO_COPY_2 }}.yaml s3://${{ SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/database/${{ env.FILE_TO_COPY_2 }}.yaml
+#      run: aws s3 cp ${{ env.FILE_TO_COPY_2 }}.yaml s3://${{ secrets.SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/database/${{ env.FILE_TO_COPY_2 }}.yaml
     - name: Copy ${{ env.FILE_TO_COPY_2 }} to S3 with version number
-      run: aws s3 cp ${{ env.FILE_TO_COPY_2 }}.yaml s3://${{ SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/database/${{ env.FILE_TO_COPY_2 }}-${{ steps.get_version.outputs.VERSION }}.yaml
+      run: aws s3 cp ${{ env.FILE_TO_COPY_2 }}.yaml s3://${{ secrets.SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/database/${{ env.FILE_TO_COPY_2 }}-${{ steps.get_version.outputs.VERSION }}.yaml
