--- a/.github/workflows/copy-to-s3.yaml
+++ b/.github/workflows/copy-to-s3.yaml
@@ -20,8 +20,7 @@ jobs:
     - name: Get the version of the just published release
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-#    - name: Copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3
-#      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_MARKETPLACE_BUCKET_NAME }}/aws-cloudformation-ecs-poc-simple/${{ env.FILE_TO_COPY_1 }}.yaml
     - name: Copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3 with version number
-      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_BUCKET_NAME }}/aws-cloudformation-ecs-poc-simple/test-${{ steps.get_version.outputs.VERSION }}.yaml
+      run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://senzingbuilds/jeffa/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
+      run: aws s3api put-object-acl --bucket senzingbuilds --key jeffa/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml --acl public-read
       #run: aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_BUCKET_NAME }}/aws-cloudformation-ecs-poc-simple/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
