--- a/.github/workflows/add-dependabot-request-to-project.yaml
+++ b/.github/workflows/add-dependabot-request-to-project.yaml
@@ -17,7 +17,7 @@ jobs:
   assign_one_project:
     runs-on: ubuntu-latest
     steps:
-    - name: Assign issues to project
+    - name: Assign pull request to project
       env:
           BOOL: ${{ contains( env.CREATOR, 'dependabot' ) }}
       uses: Senzing/github-action-add-issue-to-project@main
