--- a/.github/workflows/add-to-project.yaml
+++ b/.github/workflows/add-to-project.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Assign issues to project
-      uses: Senzing/github-action-add-issue-to-project@main
+      uses: Senzing/github-action-add-issue-to-project@0.0.0
       with:
         project: 'https://github.com/orgs/Senzing/projects/9'
         column_name: 'Backlog'
