--- a/.github/workflows/make-go-tag.yaml
+++ b/.github/workflows/make-go-tag.yaml
@@ -11,5 +11,11 @@ jobs:
     name: Make a v0.0.0 tag
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+      - name: Print environment variables
+        run: printenv
       - name: Pull new module version
         uses: Senzing/github-action-make-go-tag@issue-3.dockter.1
