--- a/.github/workflows/make-go-version-file.yaml
+++ b/.github/workflows/make-go-version-file.yaml
@@ -27,3 +27,6 @@ jobs:
         run: echo ${{ github.event.release.tag_name }}
       - name: Make go version tag
         uses: Senzing/github-action-make-go-version-file@main
+        with:
+          package: 'Bob'
+          file: '/path/to/bob.go'
