--- a/.github/workflows/make-go-version-file.yaml
+++ b/.github/workflows/make-go-version-file.yaml
@@ -4,7 +4,10 @@ name: make-go-cmd-version.yaml
 #  release:
 #    types: [published]
 
-on: [push]
+on:
+  push:
+    tags:
+      - "[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   build:
