--- a/.github/workflows/go-test-windows.yaml
+++ b/.github/workflows/go-test-windows.yaml
@@ -18,6 +18,6 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install Senzing API
-        uses: Senzing/github-action-install-senzing-api@main
+        uses: Senzing/github-action-install-senzing-api@latest
         with:
           senzingapi-version: ${{ matrix.senzingapi-version }}
