--- a/.github/workflows/go-test-darwin.yaml
+++ b/.github/workflows/go-test-darwin.yaml
@@ -18,6 +18,6 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install Senzing API
-        uses: Senzing/github-action-install-senzing-api@latest
+        uses: Senzing/github-action-install-senzing-api@main
         with:
           senzingapi-version: ${{ matrix.senzingapi-version }}
