--- a/.github/workflows/build-docker-containers.yaml
+++ b/.github/workflows/build-docker-containers.yaml
@@ -22,6 +22,8 @@ jobs:
         run: git merge origin/main
       - name: Git Update submodules
         run: git submodule update --init --recursive
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Docker list platforms
