--- a/.github/workflows/build-docker-containers.yaml
+++ b/.github/workflows/build-docker-containers.yaml
@@ -28,3 +28,5 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Docker list platforms
         run: docker buildx ls
+      - name: Dockerhub login
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
