--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -22,12 +22,12 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      # - name: Docker list platforms
-      #   run: docker buildx ls
+      - name: Docker list platforms
+        run: docker buildx ls
       - name: Dockerhub login
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
       - name: Debug GITHUB_REF_NAME
-        run: echo ${{ GITHUB_REF_NAME }}
+        run: echo ${{ github.ref_name }}
       # - name: Docker image build
       #   run: |
       #     docker buildx build \
