--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -1,14 +1,14 @@
 name: docker-push-containers-to-dockerhub.yaml
 
-on:
-  push:
-    branches:
-      - 143.dockte.2
-
 # on:
 #   push:
-#     tags:
-#       - "[0-9]+.[0-9]+.[0-9]+"
+#     branches:
+#       - 143.dockte.2
+
+on:
+  push:
+    tags:
+      - "[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   build-docker-container:
@@ -28,12 +28,12 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
       - name: Debug GITHUB_REF_NAME
         run: echo ${{ github.ref_name }}
-      # - name: Docker image build
-      #   run: |
-      #     docker buildx build \
-      #       --push \
-      #       --platform linux/arm64,linux/amd64 \
-      #       --no-cache \
-      #       --tag senzing/test-ground:latest \
-      #       --tag senzing/test-ground:${{ GITHUB_REF_NAME }} \
-      #       .
+      - name: Docker image build
+        run: |
+          docker buildx build \
+            --push \
+            --platform linux/arm64,linux/amd64 \
+            --no-cache \
+            --tag senzing/test-ground:latest \
+            --tag senzing/test-ground:${{ github.ref_name }} \
+            .
