--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -1,10 +1,5 @@
 name: docker-push-containers-to-dockerhub.yaml
 
-# on:
-#   push:
-#     branches:
-#       - 143.dockte.2
-
 on:
   push:
     tags:
@@ -26,14 +21,12 @@ jobs:
         run: docker buildx ls
       - name: Dockerhub login
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-      - name: Debug GITHUB_REF_NAME
-        run: echo ${{ github.ref_name }}
-      - name: Docker image build
+      - name: Docker build images
         run: |
           docker buildx build \
-            --push \
-            --platform linux/arm64,linux/amd64 \
             --no-cache \
-            --tag senzing/test-ground:latest \
+            --platform linux/arm64,linux/amd64 \
+            --push \
             --tag senzing/test-ground:${{ github.ref_name }} \
+            --tag senzing/test-ground:latest \
             .
