--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -6,7 +6,7 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  build-docker-container:
+  docker-push-containers-to-dockerhub:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
