--- a/.github/workflows/make-go-github-file.yaml
+++ b/.github/workflows/make-go-github-file.yaml
@@ -1,9 +1,6 @@
-name: make-go-version-file.yaml
+---
 
-#on:
-#  release:
-#    types: [published]
-
+name: make-go-github-file.yaml
 
 on:
   push:
@@ -11,19 +8,9 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  build:
-    name: Update cmd/version.go
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: '0'
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: PWD
-        run: pwd
-      - name: Make github.go file
-        uses: Senzing/github-action-make-go-github-file@main
+  make-go-github-file:
+    uses: Senzing/build-resources/.github/workflows/make-go-github-file.yaml@main
+    secrets:
+      SENZING_GITHUB_GPG_PRIVATE_KEY: ${{ secrets.SENZING_GITHUB_GPG_PRIVATE_KEY }}
+      SENZING_GITHUB_GPG_PASSPHRASE: ${{ secrets.SENZING_GITHUB_GPG_PASSPHRASE }}
+      SENZING_GITHUB_ACTOR: ${{ secrets.SENZING_GITHUB_ACTOR }}
