senzing-factory/build-resources#69 add linting

--- a/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml
@@ -1,6 +1,4 @@
----
-
-name: docker-push-containers-to-dockerhub.yaml
+name: docker push containers to dockerhub
 
 on:
   push:
@@ -12,12 +10,12 @@ jobs:
     permissions:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
-    uses: Senzing/build-resources/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml@main
-    with:
-      docker-image-repository: senzing/test-ground
-      ecr-image-repository: senzing/test-ground
-      image-tag: ${{ github.ref_name }}
     secrets:
       AWS_DOCKER_ACCOUNT_ID: ${{ secrets.AWS_DOCKER_ACCOUNT_ID }}
       DOCKERHUB_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+    uses: senzing-factory/build-resources/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml@v1
+    with:
+      docker-image-repository: senzing/test-ground
+      ecr-image-repository: senzing/test-ground
+      image-tag: ${{ github.ref_name }}
