--- a/.github/workflows/copy-to-s3.yaml.example
+++ b/.github/workflows/copy-to-s3.yaml.example
@@ -1,26 +1,32 @@
-name: Copy CFTs to S3
+name: copy to s3
+
 on:
   release:
     types:
       - published
+
 jobs:
-  Copy_CFTs_to_S3:
-    runs-on: ubuntu-latest
-    name: Copy CFTs to S3
+  Copy-CFTs-to-S3:
     env:
       FILE_TO_COPY_1: cloudformation
+    name: Copy CFTs to S3
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.SENZING_AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.SENZING_AWS_ACCESS_SECRET }}
-        aws-region: us-east-1
-    - name: Get the version of the just published release
-      id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-    - name: Copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3 with version number and make it public
-      run: |
-           aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_BUCKET_NAME }}/test/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
-           aws s3api put-object-acl --bucket ${{ secrets.SENZING_AWS_BUCKET_NAME }} --key test/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml --acl public-read
+      - uses: actions/checkout@v4
+
+      - name: configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.SENZING_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.SENZING_AWS_ACCESS_SECRET }}
+          aws-region: us-east-1
+
+      - name: get the version of the just published release
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
+      - name: copy ${{ env.FILE_TO_COPY_1 }}.yaml to S3 with version number and make it public
+        run: |
+          aws s3 cp ${{ env.FILE_TO_COPY_1 }}.yaml s3://${{ secrets.SENZING_AWS_BUCKET_NAME }}/test/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml
+          aws s3api put-object-acl --bucket ${{ secrets.SENZING_AWS_BUCKET_NAME }} --key test/${{ env.FILE_TO_COPY_1 }}-${{ steps.get_version.outputs.VERSION }}.yaml --acl public-read
