--- a/.github/workflows/docker-build-container.yaml
+++ b/.github/workflows/docker-build-container.yaml
@@ -1,22 +1,25 @@
-name: docker-build-container.yaml
+name: docker build container
+
 on:
   pull_request:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   docker-build-container:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: "0"
-      - name: git config
+      - name: get repo name
+        id: repo-basename
         run: |
-          git config user.name github-actions
-          git config user.email support@senzing.com
-      - name: Git Update submodules
-        run: git submodule update --init --recursive
-      - name: Build Docker container
-        run: make docker-build
+          echo "repo=$(basename ${{ github.repository }})" >> "$GITHUB_OUTPUT"
+        shell: bash
+
+      - name: build docker image
+        uses: senzing-factory/github-action-docker-buildx-build@v1
+        with:
+          image-repository: senzing/${{ steps.repo-basename.outputs.repo }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
