--- a/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml
@@ -13,6 +13,8 @@ permissions:
 
 jobs:
   docker-push-containers-to-dockerhub-and-ecr:
+    outputs:
+      status: ${{ job.status }}
     runs-on: ubuntu-latest
 
     steps:
@@ -34,3 +36,12 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_DOCKER_ACCOUNT_ID }}:role/github-actions-ecr-push
           sign-image: true
           username: ${{ secrets.DOCKERHUB_USERNAME }}
+
+  slack-notification:
+    needs: [docker-push-containers-to-dockerhub-and-ecr]
+    if: ${{ always() && contains(fromJSON('["failure", "cancelled"]'), needs.docker-push-containers-to-dockerhub-and-ecr.outputs.status) }}
+    secrets:
+      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+    uses: senzing-factory/build-resources/.github/workflows/build-failure-slack-notification.yaml@179-skern
+    with:
+      job-status: ${{ needs.docker-push-containers-to-dockerhub-and-ecr.outputs.status }}
