Add schedule for Renovate to run on Sundays

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,7 @@
     "docker:pinDigests"
   ],
   "enabledManagers": ["dockerfile", "docker-compose"],
+  "schedule": ["on sunday"],
   "prCreation": "not-pending",
   "packageRules": [
     {
