--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ version: 2
 updates:
   - package-ecosystem: github-actions
     assignees:
-      - "senzing-garage/senzing-devsecops"
+      - kernelsam
     cooldown:
       default-days: 21
     directory: /
